src/objects/TwilioConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Twilio App Config</description>
    <fields>
        <fullName>AccountSid__c</fullName>
        <label>AccountSid</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationSid__c</fullName>
        <label>ApplicationSid</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthToken__c</fullName>
        <label>AuthToken</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fromNumber__c</fullName>
        <inlineHelpText>10 digit phone number for outgoing SMS messages. Format without special characters i.e. 2061234567</inlineHelpText>
        <label>fromNumber</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>messServiceId__c</fullName>
        <inlineHelpText>Messaging Service ID used for outgoing SMS messages. Find your messaging service ID at https://www.twilio.com/console/sms/services/</inlineHelpText>
        <label>messServiceId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Twilio Config</label>
</CustomObject>